fix alignment of buttons for all screen sizes

--- a/src/components/viewWorkout/RestPage.scss
+++ b/src/components/viewWorkout/RestPage.scss
@@ -59,7 +59,7 @@
         padding-bottom: 4%;
 
         &__icon {
-            width: 10%; // how far apart icons are from each other
+            width: 11.3%; // how far apart icons are from each other
 
             &__ten-seconds {
                 width: 13%;
@@ -101,7 +101,7 @@
     }
 }
 
-@media (min-width: 500px) and (max-width: 799px) {
+@media (min-width: 500px) and (max-width: 999px) {
     .container-rest {
         width: 80vw;
 
@@ -119,18 +119,7 @@
 
         &__rest-controls {
             &__icon {
-                height: 45%;
-            }
-        }
-    }
-}
-
-@media (min-width: 800px) { // make the youtube player small if the screen is particularily large
-    .container-rest {
-        width: 70vw;
-        &__rest-controls {
-            &__icon {
-                height: 34%;
+                height: 49%;
             }
         }
     }
@@ -140,8 +129,9 @@
     .container-rest {
         width: 55vw;
         &__rest-controls {
+            padding-bottom: 2.75%;
             &__icon {
-                height: 26%;
+                height: 30%;
             }
         }
     }
