--- a/src/components/viewWorkout/YouTubePage.scss
+++ b/src/components/viewWorkout/YouTubePage.scss
@@ -69,7 +69,7 @@
     }
 }
 
-@media (min-width: 500px) and (max-width: 799px) {
+@media (min-width: 500px) and (max-width: 999px) {
     .container-settings {
         width: 80vw;
 
@@ -80,16 +80,6 @@
         &__youtube-controls {
             &__icon {
                 height: 50%;
-            }
-        }
-    }
-}
-@media (min-width: 800px) { // make the youtube player small if the screen is particularily large
-    .container-settings {
-        width: 70vw;
-        &__youtube-controls {
-            &__icon {
-                height: 37%;
             }
         }
     }
